--- a/Android_Audio/Events/res/layout/main.xml
+++ b/Android_Audio/Events/res/layout/main.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+<!--9.4-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
         >
-    <TextView
-            android:id="@+id/text"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+    <ListView android:id="@android:id/list"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
             />
-</ScrollView>
+    <TextView android:id="@android:id/empty"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="@string/empty"
+            />
+    <!--该活动扩展了 ListActivity,所以 Android 在布局文件中查找两个特殊 ID。如果列表中有-->
+    <!--内容,那么将显示 android:id/list 视图,否则将显示 android: id/empty 视图。因此,即使-->
+    <!--列表中没有条目也不会显示空白屏幕,用户将看到消息“No events!”-->
+
+</LinearLayout>
+        <!--9.3-->
+        <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"-->
+        <!-->-->
+        <!--<TextView-->
+        <!--android:id="@+id/text"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--/>-->
+        <!--</ScrollView>-->
 
